Fix overlapping issue

--- a/src/app/collections/views/list.component.scss
+++ b/src/app/collections/views/list.component.scss
@@ -11,7 +11,6 @@
 
   app-collection-card {
     display: inline !important;
-    position: relative;
   }
 
   &.loader {
